twitter_card_setting

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <title>SocialTech</title>
         <meta charset="utf-8">
-        <meta descroption="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
+        <meta description="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
         <meta name="twitter:card" content="summary_large">
         <meta name="twitter:site" content="@h_oku23">
         <meta property="og:url" content="file:///Users/kuramotohokuto/Desktop/Programming/socialtech/index.html">
         <meta property="og:title" content="SocialTech">
-        <meta property="og:img" content="file:///Users/kuramotohokuto/Desktop/Programming/socialtech/index.html/images/logo.png">
+        <meta property="og:image" content="file:///Users/kuramotohokuto/Desktop/Programming/socialtech/index.html/images/logo.png">
         <meta property="og:description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
