twitter_card_cardName

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>SocialTech</title>
         <meta charset="utf-8">
         <meta description="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
-        <meta name="twitter:card" content="summary_large">
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@h_oku23">
         <meta property="og:url" content="file:///Users/kuramotohokuto/Desktop/Programming/socialtech/index.html">
         <meta property="og:title" content="SocialTech">
