--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta description="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@h_oku23">
-        <meta property="og:url" content="file:///Users/kuramotohokuto/Desktop/Programming/socialtech/index.html">
+        <meta property="og:url" content="/Users/kuramotohokuto/Desktop/Programming/socialtech/index.html">
         <meta property="og:title" content="SocialTech">
-        <meta property="og:image" content="file:///Users/kuramotohokuto/Desktop/Programming/socialtech/index.html/images/logo.png">
+        <meta property="og:image" content="/Users/kuramotohokuto/Desktop/Programming/socialtech/index.html/images/logo.png">
         <meta property="og:description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
